[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
[tool]
[tool.poetry]
authors = ["Firepup650 <firepyp650@gmail.com>"]
description = "A wild west themed game."
name = "Yeehaw!"
version = "0.30.AUG.21"
[tool.poetry.dependencies]
python = "^3.8"
[tool.poetry.dev-dependencies]